--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,3 +1,4 @@
+async-timeout==4.0.3
 blinker==1.8.2
 cachelib==0.9.0
 certifi==2024.7.4
@@ -14,7 +15,9 @@ itsdangerous==2.2.0
 jinja2==3.1.4
 MarkupSafe==2.1.5
 packaging==24.1
+python-dotenv==1.0.1
 pytz==2024.1
+redis==5.0.7
 requests==2.32.3
 urllib3==2.2.2
 werkzeug==3.0.3
