--- a/kick-live/package.json
+++ b/kick-live/package.json
@@ -13,8 +13,10 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.21",
     "@mui/material": "^5.15.21",
+    "@mui/x-date-pickers": "^7.18.0",
     "axios": "^1.7.2",
-    "next": "14.2.4",
+    "dayjs": "^1.11.13",
+    "next": "^14.2.13",
     "react": "^18",
     "react-dom": "^18",
     "sharp": "^0.33.4"
